smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/mixins/missing-rest-of-with-word.smithy
// Parse error at line 5, column 18 near ` `: Expected: 'h', but found ' '
$version: "2"
namespace com.foo

structure Foo wit [Baz] {}
